--- a/styles.css
+++ b/styles.css
@@ -32,12 +32,12 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: rgb(165, 60, 78);
+    background: rgb(2, 79, 103);
     position: absolute;
 }
 
 h1{
-    color: rgb(244, 125, 145);
+    color: rgb(238, 238, 238);
     font-size: 25px;
 }
 
@@ -51,7 +51,11 @@ h1{
 .buttonClick .buttonText{
     position: relative;
     background: transparent;
+    color: white;
     font-size: 15px;
+    font-weight: 600;
+    font-style: italic;
+    font-family:Tahoma;
     padding: 15px;
     width: 300px;
     right: 0px;
@@ -61,28 +65,9 @@ h1{
 .buttonClick img{
     display:flex;
     position: absolute;
-    
+    margin-left: 30px;
     width: 25px;
     height: 25px;
+    
 
 }
-/* .buttonClick{
-    position: relative;
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-}
-
-.buttonText{
-    padding: 10px;
-    width: 30%;
-    cursor: pointer;
-    gap: 10px;
-}
-
-.buttonClick img{
-    position: relative;
-    width: 15px;
-    height: 15px;
-    left: 30px ;
-} */
